Lint updates